<?xml version="1.0"?>
<package format="3">
  <name>mujoco_ros</name>
  <version>0.0.0</version>
  <description>The dyros_red_mujoco package based on mujoco2.0</description>
  <maintainer email="saga@todo.todo">saga</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>mujoco_ros_msgs</depend>
  <depend>tocabi_lib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
